@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-05T02:05:25Z",
-  "count" : 355,
+  "timestamp" : "2022-06-18T02:10:13Z",
+  "count" : 286,
   "count_minmax" : [ 122, 355 ],
-  "count_decinc" : [ -0, +355 ],
+  "count_decinc" : [ -69, +355 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
