@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-17T16:33:50Z",
-  "count" : 246,
-  "count_minmax" : [ 120, 246 ],
-  "count_decinc" : [ -0, +246 ],
+  "timestamp" : "2022-06-18T02:10:13Z",
+  "count" : 352,
+  "count_minmax" : [ 120, 352 ],
+  "count_decinc" : [ -0, +352 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
