@@ -1,15 +1,10 @@
 {
-  "count": 4907,
+  "count": 4887,
   "uniques": 8,
   "clones": [
     {
-      "timestamp": "2022-06-03T00:00:00Z",
-      "count": 57,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 355,
+      "count": 286,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-06-17T00:00:00Z",
-      "count": 246,
+      "count": 352,
       "uniques": 2
     }
   ]
