@@ -1,3 +1,10 @@
+2022-06-18T02:10:13Z:
+* notice: last 14d: unq all: 8 4887
+* notice: prev accum: 2022-06-17T16:33:50Z: outdated-unq outdated-all / unq all: 621 29385 / 656 34292
+* notice: next accum: 2022-06-18T02:10:13Z: outdated-unq outdated-all / unq all: 623 29739 / 657 34626
+* notice: prev exec diff / last date diff / accum: unq all: +0 +106 -0 -69 / +2 +352 -0 -0 / 2 352
+* notice: removed / changed dates: [2022-06-03] / [2022-06-04 2022-06-17]
+
 2022-06-17T16:33:50Z:
 * notice: last 14d: unq all: 8 4907
 * notice: prev accum: outdated-unq outdated-all / unq all: 621 29385 / 656 34292
